added dependecy to all the tests